1ere version qui marche

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Hello Pages Home</h1>
-<p>Welcome </p>
+<%if current_user%>
+<%if @soundcloud_account%>
+<%= @soundcloud_account.followers_count%>
+<%end%>
+<%end%>
