--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,7 @@
   <h1>Welcome</h1>
 <%else%>
     <!DOCTYPE html>
+    <head>
     <meta charset="utf-8">
     <title>Force-Directed Graph</title>
     <style>
@@ -19,22 +20,35 @@
         }
 
     </style>
+     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+       <link rel="stylesheet" type="text/css" href="home.css">
+
+     </head>
     <body>
-    <%=@soundcloud_search%>
+    <div id="show">
+    <div id="value">
+        <div id="name"></div>
+        <div id="image"></div>
+        <div id="followers"></div>
+        <div id="following"></div>
+    </div>
+
+
+    <div id="schema"></div>
+    </div>
 <p></p>
-    <%= render :file => 'public/event.json' %>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script>
 
-        var width = 960,
-                height = 500,
+        var width = 400,
+                height = 400,
                 root;
 
         var force = d3.layout.force()
                 .size([width, height])
                 .on("tick", tick);
 
-        var svg = d3.select("body").append("svg")
+        var svg = d3.select("#schema").append("svg")
                 .attr("width", width)
                 .attr("height", height);
 
@@ -85,6 +99,8 @@
                     .style("fill", color)
                     .on("click", click)
                     .call(force.drag);
+
+                    console.log("blabla"+node.size());
         }
 
         function tick() {
@@ -104,6 +120,7 @@
 
         // Toggle children on click.
         function click(d) {
+            var url = '/pages/expandNew';
             if (!d3.event.defaultPrevented) {
                 if (d.children) {
                     d._children = d.children;
@@ -111,9 +128,64 @@
                 } else {
                     d.children = d._children;
                     d._children = null;
-                }
+
+
                 update();
             }
+            console.log("tu as clicked : "+d.username);
+            document.getElementById("name").innerHTML=d.username; 
+                        document.getElementById("following").innerHTML="Nombre de personnes qu'il suit :"+d.followings_count; 
+
+            document.getElementById("followers").innerHTML="Nombre de personnes qui le suivent :"+d.followers_count; 
+                $('#image').css("background-image","url("+d.avatar_url+")");
+
+
+
+
+            <% @nod=Node.new %>
+            
+    //     $.ajax({
+    //              url: "nodes/"+39+"/set_id", // Route to the Script Controller method
+    //             type: "post",
+    //             data: d.id, // This goes to Controller in params hash, i.e. params[:file_name]
+    //         complete: function(
+    //             <% @nod.save%>
+            
+    //         ) {},
+    //          success: function(data, textStatus, xhr) {
+    //                     // Do something with the response here
+    //                      // Show the file contents in our editor.
+    //                                                        // editor is defined somewhere above 
+    //                                                        // 'file_content' is the key we use to respond
+    //                                                        // in the controller function below
+    //                   },
+    //            error: function() {
+    //                     alert("Ajax error!")
+    //                   }
+    // });
+            
+            
+
+
+
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+         }   
         }
 
         // Returns a list of all nodes under the root.
