--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,16 @@
   <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="application.css">
-
   <%= csrf_meta_tags %>
+
+
 </head>
 <body class="bs-docs-home">
 
 
 
   <a class="sr-only" href="#content">Skip to main content</a>
-  <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+  <header id="headeralakon" class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
     <div class="container">
       <div class="navbar-header">
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
@@ -28,7 +29,6 @@
       <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
         <ul class="nav navbar-nav">
           <li>
-            <a href="/">Home</a>
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -67,7 +67,7 @@
 
 
 
-<div class="container">
+<div class="contentApplication">
   <%= yield %>
 </div>
 
