--- a/public/application.css
+++ b/public/application.css
@@ -1,28 +1,15 @@
-#logs{
-	width:100px;
-	display: inline-block;
-	position:absolute;
-	right:100px;
-	top:10px;
-	
-
-}
-
-#logs a{
-	width:100px;
-	font-size: 0.8em;
-	margin-top: 5px;
-	margin-bottom: 5px;
-}
-#logs button{
-	width:100px;
-	font-size: 0.8em;
-}
-
-
 body{
+		    overflow:hidden;
+}
+
+ 
+#headeralakon{
+	  top: 0px;
+
+}
+.contentApplication{
+
 	width:100%;
 	height:100%;
-
-	display: inline-block;
+	position: relative;
 }
