--- a/public/home.css
+++ b/public/home.css
@@ -1,37 +1,109 @@
-
-body{
+#mainWindow{
 	position:relative;
+	width: 100%;
+	height: 100%;
+}
+#viewWindow{
+	position: relative;
+	width: 100%;
+}
+#dataWindow{
+	position:relative;
+	float: left;
+	width: 30%;
+	height: 100%;
+	display: block;
+}
+#listViewTrack{
+	height: 60%;
+	width: 100%;
+}
+#tabs{
+	height: 100%;
+	width: 100%;
+}
+#tabs-1{
+	height: 90%;
+	width: 100%;
+}
+#tabs-2{
+	height: 90%;
+	width: 100%;
+}
 
-}
-#description{
-	font-size: 0.7em;
-}
-#description2{
-	font-size:0.7em;
-}
 
 #value{
-	width:400px;
-	height:400px;
-	background-color: #ff7700
-;
-	border-radius: 8px;
-float: left;	position:relative;
-	padding-left: 15px;
-	padding-top: 15px;
-
+	width:100%;
+	height:40%;
+	background-color: #ffffff;
+	left: 0;
+	top: 50px;
 	 }
-#schema{
-	width:400px;
-	height:400px;
-float: left;
-	position:relative;
 
-	border-radius: 8px;
-	border: 5px solid #ff7700
-;
+
+
+.player{
+
+	position: relative;
+	width: 100%;
+}
+#tree-container{
+	position: relative;
+	float: left;
+	width: 70%;
+	height: 100%;
 }
 
+
+
+          
+    .node {
+    cursor: pointer;
+  }
+
+  .overlay{
+      background-color:#EEE;
+  }
+   
+  .node circle {
+    fill: #fff;
+    stroke: steelblue;
+    stroke-width: 1.5px;
+  }
+   
+  .node text {
+    font-size:10px; 
+    font-family:sans-serif;
+  }
+   
+  .link {
+    fill: none;
+    stroke: #ccc;
+    stroke-width: 1.5px;
+  }
+
+  .templink {
+    fill: none;
+    stroke: red;
+    stroke-width: 3px;
+  }
+
+  .ghostCircle.show{
+      display:block;
+  }
+
+  .ghostCircle, .activeDrag .ghostCircle{
+       display: none;
+  }
+  .ui-content {
+    padding: 10px ;
+}
+ 
+.ui-listview {
+    margin: 10px ;
+}
+
+ 
 #image{
 	width:200px;
 	height:200px;
@@ -39,30 +111,33 @@ float: left;
 	background-size: 100%;
 }
 
-#value2{
-	width:400px;
-	height:400px;
-	background-color: #ff7700;
-	border-radius: 8px;
-float: right;
-	position:relative;
-	padding-left: 15px;
-	padding-top: 15px;
 
 
-	 }
-
-
-#image2{
-	width:200px;
-	height:200px;
-	background-repeat: no-repeat;
-	background-size: 100%;
+#description{
+	font-size: 0.7em;
 }
-#show
-{
+#description2{
+	font-size:0.7em;
+}
+#tabs{
+	position: relative;
 
-	margin-top:100px;
-	width: 1200px;
-	height:400px;
+}
+
+
+#tabs ul{
+	display: inline-block;
+
+}
+
+#buttonShowNav{
+	width: 40px;
+	height: 40px;
+	background-image: url('menu.png');
+	background-size: 100%;
+
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	z-index: 1000;
 }
