--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
            
       <script src="//connect.soundcloud.com/sdk.js"></script>
       <script src="http://w.soundcloud.com/player/api.js"></script>
-    <script src="/assets/application.js" type="text/javascript"></script>
+      <!-- <script src="/assets/application.js" type="text/javascript"></script>-->
   <script src="//code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
      
 <style type="text/css">
